# buildpacks-poetry-demo

./: .gitignore  .gitlab-ci.yml  Procfile  README.md  compose-dev.yaml  input.json  kserve-deployment.yaml  model.joblib  model.py  pyproject.toml  requirements.txt  train_model.py
binding/: ca-bundle.crt
bindings/ca-certificates/: mycert.crt
frameworks/sklearn/public_example/: README.md  kserve-deployment.yaml  model.py  train_model.py
frameworks/sklearn/sklearn-diabetes-example/: .gitignore  Procfile  README.md  input.json  kserve-deployment.yaml  pyproject.toml  requirements.txt  start_inference_endpoint.py
frameworks/sklearn/sklearn-diabetes-example/data/: sample-inference-data.csv  sample-inference-true-labels.csv  training-data.csv  training-labels.csv
frameworks/sklearn/sklearn-diabetes-example/model/: sklearn-diabetes-model-new-version.joblib
frameworks/sklearn/sklearn-diabetes-example/notebooks/: 01-train-model-locally.ipynb  02-use-local-model.ipynb  03-call-local-endpoint.ipynb
frameworks/sklearn/sklearn-diabetes-example/sklearn_diabetes_example/: __init__.py  functions.py
public_example/: requirements.txt
