[tool.poetry]
name = "automated-docker-images"
version = "0.1.2"
description = "Automate docker images for EA."
authors = [
    "Oswaldo Gomez <oswaldo.gomez@roche.com>",
]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dummy_package_testing = "~0.1.2"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"
kserve = "^0.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[[tool.poetry.source]]
name = "foo"
url = "https://code.roche.com/api/v4/projects/362083/packages/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
